[gd_scene load_steps=6 format=2]

[ext_resource path="res://Items/AmmoItems.gd" type="Script" id=1]
[ext_resource path="res://Player/Square.png" type="Texture" id=2]
[ext_resource path="res://Items/ItemParticles.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.39926

[sub_resource type="Animation" id=5]
resource_name = "bounce"
length = 3.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5, 3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.483, -0.25, 0, 0.25, 0, -0.483, -0.25, 0, 0.25, 0, 0.483, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5, 3 )
}

[node name="AmmoItem" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="InitialDecay" type="Timer" parent="."]
wait_time = 30.0

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.341176, 0.705882, 0.886275, 1 )
position = Vector2( 0, -0.454128 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "bounce"
anims/bounce = SubResource( 5 )

[node name="Particles2D" parent="." instance=ExtResource( 3 )]
scale = Vector2( 0.5, 0.5 )
[connection signal="body_entered" from="Area2D" to="." method="_AmmoPickUp"]
[connection signal="timeout" from="InitialDecay" to="." method="_InitialAmmoDecay_timeout"]
